--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
+    "nwsapi": "^2.2.5",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
